package chapter9.prac1;

public interface Observer {

    void update();

}
